# restro-backend

./: .gitignore  Dockerfile  FRONTEND_IMPLEMENTATION_GUIDE.md  MRP_VAT_BILLING_IMPLEMENTATION.md  ORDER_ITEM_NOTES_IMPLEMENTATION.md  docker-compose.yml  pyproject.toml
apps/accounts/: admin.py  admin_urls.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/accounts/management/commands/: populate_dummy_data.py
apps/accounts/migrations/: 0001_initial.py
apps/billing/: admin.py  models.py  pdf.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/billing/migrations/: 0001_initial.py  0002_initial.py  0003_systemsettings_phone.py  0004_alter_bill_payment_method.py  0005_bill_gross_amount_bill_net_amount_and_more.py  0006_bill_customer_address_bill_customer_name_and_more.py  0007_remove_bill_gross_amount_remove_bill_net_amount_and_more.py
apps/menu/: admin.py  filters.py  menus.xlsx  models.py  serializers.py  services.py  urls.py  views.py
apps/menu/management/commands/: import_menu_excel.py
apps/menu/migrations/: 0001_initial.py  0002_category_station.py  0003_menuitem_mrp.py
apps/orders/: admin.py  models.py  pdf.py  serializers.py  services.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_initial.py  0003_orderitem_station_orderstationlog.py  0004_orderitem_notes_unique_constraint.py  0005_orderitem_unit_mrp.py
apps/tables/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
apps/tables/migrations/: 0001_initial.py
apps/templates/billing/: bill_pdf.html
apps/templates/orders/: station_ticket.html
main/: asgi.py  celery.py  exceptions.py  settings.py  urls.py
