[tool.poetry]
name = "restro-backend"
version = "0.1.0"
description = ""
authors = ["pristine-dev <info@pristine-minds.com>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"
package-mode = false

# Include py.typed for type checking
packages = [
    { include = "**/*.py" },
    { include = "py.typed" },
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "*"
django-environ = "*"
Django = ">=4.2,<4.3"
drf-writable-nested = "*"
djangorestframework = "*"
psycopg2-binary = "*"
django-cors-headers = "*"
django-storages = "*"
django-admin-autocomplete-filter = "*"
drf-spectacular = "*"
ipython = "*"
factory-boy = "*"
uwsgi = "*"
django-pwa = "*"
django-filter = "*"
celery = {extras = ["redis"], version = "^5.3.4"}
django-redis = "^5.3.0"
django-celery-beat = "*"
pillow = "*"
openpyxl = "*"
django-anymail = "*"
django-ckeditor = "*"
django-phonenumber-field = {extras = ["phonenumbers"], version = "*"}
django-reversion = "*"
phonenumbers = "*"
pandas = "*"
django-admin-rangefilter = "*"
reportlab = "*"
qrcode = {extras = ["pil"], version = "*"}
# Pin elasticsearch client to 7.x to satisfy django-haystack's elasticsearch7 backend
djangorestframework-simplejwt = "*"
python-barcode = "*"
beautifulsoup4 = "*"
numpy = "*"
scipy = "*"
geopy = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-profiling = "*"
pytest-ordering = "*"
pytest-django = "*"
django-stubs = "==4.2.6"  # NOTE: 4.2.7 is messing with TextChoices/IntergerChoices
djangorestframework-stubs = { version = "*", allow-prereleases = true }
celery-types = "*"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.settings"
log_cli = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 125
# NOTE: Update in .pre-commit-config.yaml as well
extend-exclude = "(__pycache__|.*snap_test_.*\\.py|.+\\/.+\\/migrations\\/.*)"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = [
    "**/__pycache__",
    "**/snap_test_*.py",
    ".venv/",
    "**/migrations/*.py",
]

[tool.pyright]
exclude = [
    "**/__pycache__",
    "**/snap_test_*.py",
    ".venv/",
    "**/migrations/*.py",
]
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

# Enable type checking for Django and third-party packages
typeCheckingMode = "basic"

# Path to the py.typed file
pythonVersion = "3.12"
pythonPlatform = "All"

# Add type stubs for better type checking
typeStubsPath = "."

# Enable type checking for Django
django = true

# Add type checking for Django REST framework
drf = true

# Ignore specific type checking errors
# [tool.pyright.reportGeneralTypeIssues]
# reportUnknownMemberType = false
# reportUnknownVariableType = false
# reportUnknownArgumentType = false
# reportUnknownLambdaType = false
# reportUnknownParameterType = false
